# Agent_community

./: FINDINGS.md  LAYER1_BASELINE.md  LAYER2_ALIENBENCH_SELFCHECK.md  LAYER2_ATTACK_SURVEY.md  LAYER2_CONTAGION_COMPARISON_SET.md  LAYER2_S0_BASELINE.md  analyze_research_results.py  principle.md  pyproject.toml
.claude/: settings.local.json
aces/: attacks.py  cli.py  config.py  contagion.py  database.py  defenses.py  engine.py  experiment.py  metrics.py  models.py  moltbook.py  network.py  openclaw_runtime.py  prompting.py  runtime.py  services.py
config/: attacks.yaml  community_research_attacks.yaml  community_research_enterprise.yaml  community_research_experiment.yaml  community_worm_s0_attacks.yaml  community_worm_s0_enterprise.yaml  community_worm_s0_experiment.yaml
docker/: generate_agent_configs.py
docs/: research_scenarios.md
scripts/: observe_passive_community.py  run_attack_observation.py  run_framework_justification.py  run_real_experiment.py  run_worm_s0.py
tests/: test_alienbench_levels.py  test_delivery_latency.py  test_economy.py  test_economy_teeth.py  test_forum.py  test_frozen_substrate.py  test_job_stages.py  test_key_auth.py  test_openclaw_runtime.py  test_prompting_parser.py  test_research_phase3.py  test_research_regressions.py  test_run_reliability.py  test_runtime_url.py  test_secret_read_monitoring.py  test_services.py  test_skills.py  test_trust_dynamics.py  test_validity_fixes.py  test_worm_s0_baseline.py  test_worm_spread_metric.py
